# advent-of-code

./: README.md  pyproject.toml
aoc/2022/: README.md
aoc/2022/day01/: __main__.py  part1.py  part2.py
aoc/2022/day02/: __main__.py  part1.py  part2.py
aoc/2022/day03/: __main__.py  part1.py  part2.py
aoc/2022/day04/: __main__.py  part1.py  part2.py
aoc/2022/day05/: __main__.py  part1.py  part2.py
aoc/2022/day06/: __main__.py  part1.py  part2.py
aoc/2022/day07/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day08/: __main__.py  part1.py  part2.py
aoc/2022/day09/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day10/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day11/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day12/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day13/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day14/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day15/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day16/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day17/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day18/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day19/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day20/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day21/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day22/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day23/: __main__.py  part1.py  part2.py  problem.txt
aoc/2022/day24/: __main__.py  part1.py  (+2 more)
utils/: aoc_utils.py
(+4 files in other folders)
